--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
         "module": "es2015",
         "moduleResolution": "node",
         "sourceMap": true,
-        "target": "es5"
+        "target": "es5",
+        "baseUrl": ".",
+        "typeRoots": [ "node_modules/@types" ],
+        "types": [ "node" ]
     },
     "include": [
         "src/**/*.ts"
