--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@ionic-native/status-bar": "4.20.0",
         "@ionic/storage": "2.1.3",
         "cordova-android": "8.1.0",
-        "cordova-ios": "5.0.0",
+        "cordova-ios": "^5.1.1",
         "cordova-plugin-androidx": "1.0.2",
         "cordova-plugin-androidx-adapter": "1.1.0",
         "cordova-plugin-ionic-webview": "2.5.3",
@@ -56,8 +56,8 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
