--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-browser": "5.0.0",
         "@angular/platform-browser-dynamic": "5.0.0",
         "@ionic-native/core": "4.20.0",
+        "@ionic-native/media": "4.20.0",
         "@ionic-native/native-page-transitions": "4.20.0",
         "@ionic-native/splash-screen": "4.20.0",
         "@ionic-native/status-bar": "4.20.0",
@@ -32,7 +33,9 @@
         "cordova-ios": "^5.1.1",
         "cordova-plugin-androidx": "1.0.2",
         "cordova-plugin-androidx-adapter": "1.1.0",
+        "cordova-plugin-file": "^6.0.2",
         "cordova-plugin-ionic-webview": "2.5.3",
+        "cordova-plugin-media": "5.0.3",
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
         "cordova-plugin-whitelist": "1.3.3",
@@ -53,7 +56,10 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-media": {
+                "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+            }
         },
         "platforms": [
             "android",
