--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "cordova-plugin-androidx-adapter": "1.1.0",
         "cordova-plugin-file": "6.0.2",
         "cordova-plugin-ionic": "5.4.7",
-        "cordova-plugin-ionic-webview": "2.5.3",
+        "cordova-plugin-ionic-webview": "5.0.0",
         "cordova-plugin-media": "5.0.3",
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
@@ -64,7 +64,7 @@
             },
             "cordova-plugin-ionic": {
                 "APP_ID": "b230666d",
-                "CHANNEL_NAME": "Master",
+                "CHANNEL_NAME": "Debug",
                 "UPDATE_METHOD": "none",
                 "UPDATE_API": "https://api.ionicjs.com",
                 "MAX_STORE": "2",
