--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@ionic/storage": "2.1.3",
         "cordova-admob-plus": "0.34.0",
         "cordova-android": "8.1.0",
-        "cordova-ios": "5.1.1",
+        "cordova-ios": "^5.1.1",
         "cordova-plugin-add-swift-support": "2.0.2",
         "cordova-plugin-androidx": "1.0.2",
         "cordova-plugin-androidx-adapter": "1.1.0",
